--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "recipesearch",
-  "version": "1.0.0",
-  "description": "recipe search using an external API",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open"
-  },
-  "author": "Marta Pozaroszczyk",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
-  },
-  "dependencies": {
-    "axios": "^0.18.1",
-    "babel-polyfill": "^6.26.0",
-    "fractional": "^1.0.0",
-    "uniqid": "^4.1.1"
-  }
+    "name": "recipesearch",
+    "version": "1.0.0",
+    "description": "recipe search using an external API",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack --mode production",
+        "dev": "webpack-dev-server --mode development",
+        "start": "node server.js",
+        "heroku-postbuild": "webpack -p"
+    },
+    "author": "Marta Pozaroszczyk",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.6.1",
+        "html-webpack-plugin": "^3.2.0",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^3.3.6",
+        "webpack-dev-server": "^3.7.2"
+    },
+    "dependencies": {
+        "@webpack-cli/init": "^0.2.2",
+        "axios": "^0.18.1",
+        "babel-polyfill": "^6.26.0",
+        "fractional": "^1.0.0",
+        "uniqid": "^4.1.1"
+    }
 }
